--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "musicians-coinbase-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/pbtrad/Musos-Crypto-Tracker.git/",
+  "homepage": "https://github.com/pbtrad/Musos-Crypto-Tracker",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
